<resources>
    <string name="app_name">Skill Assessment</string>
    <string name="app_desc">This Application will help you in improving your programming skills to pass the tests well with great score</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_profile">Profile</string>
    <string name="heart">Heart</string>
    <string name="title">Title</string>
    <string name="content_count">10 Questions</string>
    <string name="no_internet_connection_try_again">No Internet Connection Try Again!</string>
    <string name="try_again">Try Again</string>
    <string name="category_title">Category Title</string>
    <string name="start_test">Start Test</string>
    <string name="description">Description</string>
    <string name="download">Download</string>
    <string name="add">Add</string>
    <string name="added">Added</string>
    <string name="add_failed_try_again">adding failed try again</string>
    <string name="you_dont_have_enough_credit">You don\'t have enough credit</string>
    <string name="total_credits">Total Credits</string>
    <string name="view_ad">view ad</string>
    <string name="to_view_question_add_first">to view questions try to add first</string>
    <string name="added_successfully">Added Successfully</string>
    <string name="credits">Credits</string>
    <string name="retry">Retry</string>
    <string name="delete">delete</string>
    <string name="share_content">share</string>
    <string name="share_using">share using</string>
    <string name="bookmark_deleted">bookmark deleted</string>
    <string name="coins">Coins</string>
    <string name="added_to_bookmark">Added to bookmark</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="please_wait_for_download_to_finish">Please wait for download to be finished</string>
    <string name="choice">Choice</string>
    <string name="no_response">No response</string>
    <string name="test_result">Test Result</string>
    <string name="performance">Performance</string>
    <string name="skip">Skip</string>
    <string name="check">Check</string>
    <string name="keep_practicing">Keep Practicing!</string>
    <string name="number_of_life">Available life: </string>
    <string name="end_test">End Test</string>
    <string name="code">Code</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="version">version: 1.0</string>
    <string name="title_about">About</string>
    <string name="donation_title"></string>
    <string name="donate">Donate</string>
</resources>