<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/custom_list_category_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_category_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/category_title"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:padding="4dp"
        android:background="@drawable/view_question_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <net.golbarg.engtoper.CustomView.QuestionView
        android:id="@+id/question_view"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:question_text="@string/title"
        app:question_code="@string/code"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_category_title" />

    <net.golbarg.engtoper.CustomView.AnswerView
        android:id="@+id/question_answer_view"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:answer_text="@string/title"
        app:answer_code="@string/code"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_view" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:drawableEnd="@drawable/ic_delete"
        android:drawableTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_answer_view" />

</androidx.constraintlayout.widget.ConstraintLayout>