<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:background="@drawable/custom_list_category_background">

    <TextView
        android:id="@+id/txt_category_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/category_title"
        android:textColor="?attr/textColor"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txt_success_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/correct"
        android:textColor="?attr/textColor"
        app:layout_constraintStart_toStartOf="@+id/txt_category_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_category_title" />

    <TextView
        android:id="@+id/txt_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrong"
        android:textColor="?attr/textColor"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_correct"
        app:layout_constraintStart_toEndOf="@+id/txt_correct"
        app:layout_constraintTop_toTopOf="@+id/txt_correct" />

    <TextView
        android:id="@+id/txt_no_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_response"
        android:textColor="?attr/textColor"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_wrong"
        app:layout_constraintStart_toEndOf="@+id/txt_wrong"
        app:layout_constraintTop_toTopOf="@+id/txt_wrong"
        />

    <TextView
        android:id="@+id/txt_success_rate"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="5dp"
        android:text="100%"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="?attr/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>