<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_category_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/view_question_background"
        android:text="@string/category_title"
        android:textSize="22sp"
        android:padding="14dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="15dp"
        android:paddingRight="30dp"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_go_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_category_title">

        <TextView
            android:id="@+id/txt_progress_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/performance"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_question_count"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_note"
                app:tint="?attr/textColor" />

            <TextView
                android:id="@+id/txt_question_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="100 Question"
                android:textColor="?attr/textColor"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_question_correct"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_check"
                app:tint="?attr/textColor" />

            <TextView
                android:id="@+id/txt_question_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="60 Correct Answer"
                android:textColor="?attr/textColor"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_question_wrong"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_close"
                app:tint="?attr/textColor" />

            <TextView
                android:id="@+id/txt_question_wrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="30 Wrong Answer"
                android:textColor="?attr/textColor"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_question_no_answer"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_skip"
                app:tint="?attr/textColor" />

            <TextView
                android:id="@+id/txt_question_no_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="10 No Answer"
                android:textColor="?attr/textColor"
                android:textSize="16sp" />
        </LinearLayout>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundTint="?attr/textColor"
            android:layout_gravity="center"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_go_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_home"
        android:textColor="@color/white"
        android:drawableEnd="@drawable/ic_home"
        android:drawableTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>