<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/layout_main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1"
        android:background="@drawable/progress_status_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:tint="@color/white"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_close" />

        <ProgressBar
            android:id="@+id/progress_step"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:max="10"
            android:min="0"
            android:progressDrawable="@drawable/progressbar_style"
            android:progress="5" />

        <LinearLayout
            android:layout_width="95dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_life"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/ic_heart" />

            <TextView
                android:id="@+id/txt_life"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:text="10"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="5dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_bookmark"
                android:layout_width="30dp"
                android:layout_height="32dp"
                android:background="@drawable/bottom_round"
                app:tint="@color/white"
                android:layout_gravity="top|center"
                android:src="@drawable/ic_bookmark_no"/>
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/layout_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/linear_layout_question_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            >
            <net.golbarg.engtoper.CustomView.QuestionView
                android:id="@+id/question_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                app:question_text="@string/title"
                app:question_code="@string/code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <net.golbarg.engtoper.CustomView.AnswerView
                android:id="@+id/answer_view_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginTop="5dp"
                app:answer_text="@string/title"
                app:answer_code="@string/code"
                app:answer_option="A"
                />
            <net.golbarg.engtoper.CustomView.AnswerView
                android:id="@+id/answer_view_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginTop="5dp"
                app:answer_text="@string/title"
                app:answer_code="@string/code"
                app:answer_option="B"
                />
            <net.golbarg.engtoper.CustomView.AnswerView
                android:id="@+id/answer_view_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginTop="5dp"
                app:answer_text="@string/title"
                app:answer_code="@string/code"
                app:answer_option="C"
                />
            <net.golbarg.engtoper.CustomView.AnswerView
                android:id="@+id/answer_view_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginTop="5dp"
                app:answer_text="@string/title"
                app:answer_code="@string/code"
                app:answer_option="D"
                />

            <net.golbarg.engtoper.CustomView.AnswerView
                android:id="@+id/answer_view_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginTop="5dp"
                app:answer_text="@string/title"
                app:answer_code="@string/code"
                app:answer_option="E"
                />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:weightSum="4"
        android:background="?attr/category_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/layout_footer"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_weight="4">
            <TextView
                android:id="@+id/txt_question_track"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/textColor"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:paddingLeft="10dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="0/0" />
            <Button
                android:id="@+id/btn_handle_question"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:drawableTint="@color/white"
                android:text="@string/skip"
               />
            <TextView
                android:id="@+id/txt_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/textColor"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/ic_timer"
                android:drawableTint="?attr/textColor"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="00:00" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>